--- a/default.css
+++ b/default.css
@@ -17,7 +17,7 @@ body p {
 
 h1 { 
     font-size: 3.8em;
-    color: #000000;
+    color: #2966B8;
     margin-bottom: 3px;
     font-family: 'Gentium Book Basic', serif;
 }
@@ -36,7 +36,7 @@ a { color: #000000; }
 
 .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
 
-.download { float: right; }
+.download { float: right; padding-top: 10px; }
 
 pre { background: #1a1a1a; color: #fff; padding: 15px;}
 
