--- a/default.css
+++ b/default.css
@@ -20,6 +20,7 @@ h1 {
     margin-bottom: 3px;
     font-family: 'Gentium Book Basic', serif;
     font-size: 3.8em;
+    text-align: right;
     font-color: #2966B8;
 }
 
