--- a/default.css
+++ b/default.css
@@ -17,7 +17,8 @@ body p {
 }
 
 h1 { 
-    margin-bottom: 3px;
+    margin-top: 0px;
+    margin-bottom: 1px;
     font-family: 'Gentium Book Basic', serif;
     font-size: 3.8em;
     text-align: right;
@@ -28,7 +29,11 @@ h1 .small { font-size: 0.35em; }
 
 h1 a { text-decoration: none }
 
-h2 { font-size: 1.5em; color: #000000; }
+h2 {
+    font-size: 1.5em;
+    font-family: 'Gentium Book Basic', serif;
+    color: #000000;
+}
 
 h2 a { text-decoration: none }
 
@@ -36,9 +41,27 @@ h3 { text-align: center; color: #000000; }
 
 a { color: #000000; }
 
-.description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
+.description {
+    font-size: 1.3em;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-style: bold;
+    font-family: 'Lusitana';
+}
 
 .download { float: right; padding-top: 10px; }
+
+.menu {
+    font-size: 1.3em;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.menu a {
+    color: #2966B8;
+    text-decoration: none;
+}
+
 
 pre { background: #1a1a1a; color: #fff; padding: 15px;}
 
